--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3432,12 +3432,12 @@ input, select, textarea {
 
 		#banner h1 .brandcolor-blue{
 			color: #ffffff; /* crypto blue */
-			text-shadow: 0 0 12px rgba(155, 241, 255, 0.35);
+			text-shadow: 0 0 12px rgba(255, 255, 255, 0.35);
 		}
 
 		#banner h1 .brandcolor-yellow{
 			color: #e2c74e; /* crypto blue */
-			text-shadow: 0 0 12px rgba(191, 194, 13, 0.35);
+			text-shadow: 0 0 12px rgb(194, 152, 13);
 		
 		}
 
